--- a/mymwebsite/templates/cases/routestrademarketing.html
+++ b/mymwebsite/templates/cases/routestrademarketing.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="MyMensor">
     <meta name="author" content="Celtapps">
     <meta property="og:title" content="{% trans "Simple Trade Marketing Control with Certified Routes" %}">
-    <meta property="og:description" content="{% trans "Control efficiently the way your trade marketing promoter moves around the city, make remotely checking merchandising actions at the point of sale a simple task." %}">
+    <meta property="og:description"
+          content="{% trans "Control efficiently the way your trade marketing promoter moves around the city, make remotely checking merchandising actions at the point of sale a simple task." %}">
     <meta property="og:image" content="{% static 'images/trademarketing.jpg' %}">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
@@ -17,14 +18,15 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{% trans "Simple Trade Marketing Control with Certified Routes" %}">
-    <meta name="twitter:description" content="{% trans "Control efficiently the way your trade marketing promoter moves around the city, make remotely checking merchandising actions at the point of sale a simple task." %}">
+    <meta name="twitter:description"
+          content="{% trans "Control efficiently the way your trade marketing promoter moves around the city, make remotely checking merchandising actions at the point of sale a simple task." %}">
     <meta name="twitter:image" content="{% static 'images/trademarketing.jpg' %}">
 {% endblock %}
 {% block content %}
     {% get_current_language as LANGUAGE_CODE %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
+        <a href="{% url 'cases' %}"><h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6></a>
         {% if LANGUAGE_CODE == "pt" %}
-            <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
             <h1 class="pb-3">Controle Simples de Trade Marketing com Rotas Certificadas</h1>
             <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
                  alt={% trans "Shopping cart in supermarket." %}>
@@ -53,7 +55,6 @@
                   class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
             </p>
         {% elif LANGUAGE_CODE == "pt-br" %}
-            <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
             <h1 class="pb-3">Controle Simples de Trade Marketing com Rotas Certificadas</h1>
             <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
                  alt={% trans "Shopping cart in supermarket." %}>
@@ -82,21 +83,31 @@
                   class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
             </p>
         {% else %}
-            <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
             <h1 class="pb-3">Simple Trade Marketing Control with Certified Routes</h1>
             <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
                  alt={% trans "Shopping cart in supermarket." %}>
-            <p>Control efficiently the way your trade marketing promoter moves around the city without having to fill a mountain of entries and without changing the way you work. Does it look tempting?</p>
-            <p>With <strong> MyMensor </strong> you will receive the photos that your promoter will make during the trade marketing work in an automatic, certified and safe way.</p>
-            <p>Using our <a href="https://app.mymensor.com"> WebApp </a> you will see the routes that your promoter made, such as a supermarket gondola image, as soon as it was snapped and will know the exact location!</p>
+            <p>Control efficiently the way your trade marketing promoter moves around the city without having to fill a
+                mountain of entries and without changing the way you work. Does it look tempting?</p>
+            <p>With <strong> MyMensor </strong> you will receive the photos that your promoter will make during the
+                trade marketing work in an automatic, certified and safe way.</p>
+            <p>Using our <a href="https://app.mymensor.com"> WebApp </a> you will see the routes that your promoter
+                made, such as a supermarket gondola image, as soon as it was snapped and will know the exact location!
+            </p>
             <p>In addition, the photos are stored in our servers in the cloud, without risk of being lost.</p>
-            <p>Checking merchandising actions at the point of sale becomes a simple task with the use of MyMensor. Your promoter can take photos and mini videos of the action, always with time and location certification.</p>
-            <p>But this is just the beginning! There is much more at Mymensor: automatic filing, automatic sharing, etc. So, do not wait, <a id="registerbtn" class="registerbtn" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"> start your 30-day free trial now! </a> <mark> No credit card during the trial period </mark>, and even after you subscribe, you can cancel at any time with a single click of a button!</p>
+            <p>Checking merchandising actions at the point of sale becomes a simple task with the use of MyMensor. Your
+                promoter can take photos and mini videos of the action, always with time and location certification.</p>
+            <p>But this is just the beginning! There is much more at Mymensor: automatic filing, automatic sharing, etc.
+                So, do not wait, <a id="registerbtn" class="registerbtn"
+                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"> start your
+                    30-day free trial now! </a>
+                <mark> No credit card during the trial period</mark>
+                , and even after you subscribe, you can cancel at any time with a single click of a button!
+            </p>
             <p><a href="{% url 'routestrademarketinghowto' %}"
                   class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
             </p>
         {% endif %}
-    <div id="sharebtns" class="ssk-xs ssk-group">
+        <div id="sharebtns" class="ssk-xs ssk-group">
             <a href="" class="ssk ssk-facebook"></a>
             <a href="" class="ssk ssk-twitter"></a>
             <a href="" class="ssk ssk-google-plus"></a>
