--- a/mymwebsite/templates/howto/routestrademarketing.html
+++ b/mymwebsite/templates/howto/routestrademarketing.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
         <h6 class="text-uppercase text-dark">{% trans "How To?" %}</h6>
-        <h1 class="pb-3">Controle Simples de Trade Marketing com Rotas Certificadas</h1>
+        <h1 class="pb-3">{% trans "Simple Trade Marketing Control with Certified Routes" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
              alt={% trans "Shopping cart in supermarket." %}>
         <p>{% trans "How to<mark> simply control Trade Marketing using MyMensor? </mark> Do I have to get one license for each trade marketing promoter?" %}</p>
