--- a/mymwebsite/templates/cases/usingyourowndata.html
+++ b/mymwebsite/templates/cases/usingyourowndata.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Cases" %} - {{ block.super }}{% endblock %}
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
-        <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
+        <a href="{% url 'cases' %}"><h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6></a>
         <h1 class="pb-3">{% trans "Using Your Own Data for Your Own Benefit" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/usingyourowndata.jpg' %}"
                  alt={% trans "Man surfing the bigdata wave, in form of a dollar sign." %}>
