--- a/mymwebsite/templates/cases/routestrademarketing.html
+++ b/mymwebsite/templates/cases/routestrademarketing.html
@@ -111,7 +111,7 @@
             <a href="" class="ssk ssk-facebook"></a>
             <a href="" class="ssk ssk-twitter"></a>
             <a href="" class="ssk ssk-google-plus"></a>
-            <a href="whatsapp://send?text=https%3A%2F%2Fmymensor.com%2F{{ LANGUAGE_CODE }}%2Fcases%2Ffollowingjobs"
+            <a href="whatsapp://send?text=https%3A%2F%2Fmymensor.com%2F{{ LANGUAGE_CODE }}%2Fcases%2Froutestrademarketing"
                class="ssk ssk-whatsapp"></a>
             <a href="" class="ssk ssk-email"></a>
         </div>
@@ -122,7 +122,7 @@
     <script type="text/javascript">
         SocialShareKit.init({
             selector: '.ssk',
-            url: 'https://mymensor.com/{{ LANGUAGE_CODE }}/cases/followingjobs/'
+            url: 'https://mymensor.com/{{ LANGUAGE_CODE }}/cases/routestrademarketing/'
         });
     </script>
 {% endblock %}
