--- a/mymwebsite/templates/howto/routestrademarketing.html
+++ b/mymwebsite/templates/howto/routestrademarketing.html
@@ -4,8 +4,7 @@
 {% block title %}{% trans "How To" %} - {{ block.super }}{% endblock %}
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
-        <a href="{% url 'cases' %}"><h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6></a>
-        <h6 class="text-uppercase text-dark">{% trans "How To?" %}</h6>
+        <a href="{% url 'howto' %}"><h6 class="text-uppercase text-dark">{% trans "How To?" %}</h6></a>
         <h1 class="pb-3">{% trans "Simple Trade Marketing Control with Certified Routes" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/trademarketing.jpg' %}"
              alt={% trans "Shopping cart in supermarket." %}>
