--- a/mymwebsite/templates/howto/assetmanagement.html
+++ b/mymwebsite/templates/howto/assetmanagement.html
@@ -5,10 +5,10 @@
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
         <h6 class="text-uppercase text-dark">{% trans "How To?" %}</h6>
-        <h1 class="pb-3">{% trans "Making Sure that a Photo is NOT a Fake" %}</h1>
-        <img class="card-img-top img-fluid pb-3" src="{% static 'images/genusemediaplan.jpg' %}"
-             alt={% trans "Pinocchio sitting over a mobile phone." %}>
-        <p>{% trans "To prove to somebody that your media is real is very simple: use MyMensor to produce and share your media!" %}</p>
+        <h1 class="pb-3">{% trans "Facility Management, Managing Assets in a Simple Way" %}</h1>
+        <img class="card-img-top img-fluid pb-3" src="{% static 'images/assetmanagement.jpg' %}"
+             alt={% trans "Symbols of different facilities types." %}>
+        <p>{% trans "To keep track of all the assets your company personnel uses in their day to day work and make sure that everything is ready to work." %}</p>
         <p>{% trans "Ok, let's got step by step on how you do it." %}</p>
         <p>{% trans "<strong>1.</strong> Install MyMensor Mobile app from " %}<a
                 href='https://play.google.com/store/apps/details?id=com.mymensorar&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
