--- a/mymwebsite/templates/howto/assetmanagement.html
+++ b/mymwebsite/templates/howto/assetmanagement.html
@@ -16,7 +16,7 @@
         <p>{% trans "<strong>2.</strong> Run app and create your user" %}</p>
         <p>{% trans "<strong>3.</strong> Point your smartphone camera to what you need to photograph and press the camera button" %}</p>
         <p>{% trans "<strong>4.</strong> If you did not change the VP folder before taking your photo, the picture you just made is stored in VP#0. So, just tap on the bottom left blue button in the screen to show the captures present so far in this VP." %}</p>
-        <p>{% trans "<strong>5.</strong> You can always rearrange your photos across differnt VPs in the WebApp." %}</p>
+        <p>{% trans "<strong>5.</strong> You can always rearrange your photos across different VPs in the WebApp." %}</p>
         <p>{% trans "<strong>6.</strong> If you want, follow the link and download the PDF certificate that is produced by the MyMensor Web App media check page. <mark>You can print it and later on use the embeded QR-code to take you back to the same media check page.</mark>" %}</p>
         <p class="mt-5">{% trans "Check the video below for a visual guide!" %}</p>
         {% if LANGUAGE_CODE == "pt" %}
@@ -42,8 +42,8 @@
             <img class="img-fluid" src="{% static 'images/bragaportanova.jpeg' %}" alt=""
                  style="width: 100%;">
         </a>
-        <p class="mt-5">{% trans "You can, for instance organize your assets per groups in the differnt VPs. The phots will be always organized and available in our cloud storage." %}</p>
-        <p>{% trans "We hope this will make your life easier! But, as we said before, this is just the simpler way of doing this with MyMensor. Please refer to our case " %}</p><a href="{% url 'usingyourowndata' %}">{% trans "Using your own data" %}</a><p>{% trans " to learn how to gather the data related to your equipemnt and tools." %}</p>
+        <p class="mt-5">{% trans "You can, for instance organize your assets per groups in the differnt VPs. The photos will always be organized and available in our cloud storage." %}</p>
+        <p>{% trans "We hope this will make your life easier! But, as we said before, this is just the simpler way of doing this with MyMensor. Please refer to our case " %}<a href="{% url 'usingyourowndata' %}">{% trans "Using your own data" %}</a>{% trans " to learn how to gather the data related to your equipemnt and tools." %}</p>
         <p>{% trans "But that is just the tip of he iceberg! There is a lot more to MyMensor: automatic filing, automatic sharing etc. So, look no further, " %}
             <a id="registerbtn" class="registerbtn"
                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
