--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-md-3 ml-auto mb-5">
                         <ul class="list-unstyled list-spaced">
-                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Product" %}</h6></li>
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Learn" %}</h6></li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/docs/">{% trans "Docs" %}</a></li>
                             <li><a class="text-muted"
@@ -90,6 +90,13 @@
                             </li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/faq/">{% trans "FAQ" %}</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 ml-auto mb-5">
+                        <ul class="list-unstyled list-spaced">
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Download" %}</h6></li>
+                            <li><a class="text-muted"
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/download/">{% trans "Mobile App" %}</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 mb-5">
