--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -84,10 +84,16 @@
                         <ul class="list-unstyled list-spaced">
                             <li class="mb-2"><h6 class="text-uppercase">{% trans "Learn" %}</h6></li>
                             <li><a class="text-muted"
-                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/docs/">{% trans "Docs" %}</a></li>
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/cases/">{% trans "Cases" %}</a>
+                            </li>
+                            <li><a class="text-muted"
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/howto/">{% trans "How to" %}</a>
+                            </li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/videos/">{% trans "Videos" %}</a>
                             </li>
+                            <li><a class="text-muted"
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/docs/">{% trans "Docs" %}</a></li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/faq/">{% trans "FAQ" %}</a></li>
                         </ul>
