--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -127,19 +127,32 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-3 offset-md-1 mb-5">
+                    <div class="col-md-2 mb-5">
                         <ul class="list-unstyled list-spaced">
-                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Product" %}</h6></li>
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Learn" %}</h6></li>
                             <li><a class="text-muted"
-                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/docs/">{% trans "Docs" %}</a></li>
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/cases/">{% trans "Cases" %}</a>
+                            </li>
+                            <li><a class="text-muted"
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/howto/">{% trans "How to" %}</a>
+                            </li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/videos/">{% trans "Videos" %}</a>
                             </li>
                             <li><a class="text-muted"
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/docs/">{% trans "Docs" %}</a></li>
+                            <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/faq/">{% trans "FAQ" %}</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3 mb-5">
+                    <div class="col-md-2 mb-5">
+                        <ul class="list-unstyled list-spaced">
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Download" %}</h6></li>
+                            <li><a class="text-muted"
+                                   href="https://mymensor.com/{{ LANGUAGE_CODE }}/download/">{% trans "Mobile App" %}</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2 mb-5">
                         <ul class="list-unstyled list-spaced">
                             <li class="mb-2"><h6 class="text-uppercase">{% trans "Legal" %}</h6></li>
                             <li><a class="text-muted"
