--- a/mymwebsite/templates/howto.html
+++ b/mymwebsite/templates/howto.html
@@ -38,6 +38,14 @@
                 <p class="card-text">{% trans "MyMensor will empower you to accomplish that! Follow our step by step how-to guide." %}</p>
             </div>
         </div>
+        <div id="assetmanagement" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/assetmanagement.jpg' %}"
+                 alt={% trans "Symbols of different facilities types." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "Facility Management, Managing Assets in a Simple Way" %}</h4>
+                <p class="card-text">{% trans "Let's have a walk through on how to do that using MyMensor." %}</p>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
