--- a/mymwebsite/templates/howto/assetmanagement.html
+++ b/mymwebsite/templates/howto/assetmanagement.html
@@ -42,8 +42,8 @@
             <img class="img-fluid" src="{% static 'images/bragaportanova.jpeg' %}" alt=""
                  style="width: 100%;">
         </a>
-        <p class="mt-5">{% trans "You can, for instance organize your assets per groups in the differnt VPs. The photos will always be organized and available in our cloud storage." %}</p>
-        <p>{% trans "We hope this will make your life easier! But, as we said before, this is just the simpler way of doing this with MyMensor. Please refer to our case " %}<a href="{% url 'usingyourowndata' %}">{% trans "Using your own data" %}</a>{% trans " to learn how to gather the data related to your equipemnt and tools." %}</p>
+        <p class="mt-5">{% trans "You can, for instance organize your assets per groups in the different VPs. The photos will always be organized and available in our cloud storage." %}</p>
+        <p>{% trans "We hope this will make your life easier! But, as we said before, this is just the simpler way of doing this with MyMensor. Please refer to our case " %}<a href="{% url 'usingyourowndata' %}">{% trans "Using your own data" %}</a>{% trans " to learn how to gather the data related to your equipment and tools." %}</p>
         <p>{% trans "But that is just the tip of he iceberg! There is a lot more to MyMensor: automatic filing, automatic sharing etc. So, look no further, " %}
             <a id="registerbtn" class="registerbtn"
                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
